@@ -41,6 +41,9 @@ NEW: [features/improvements]
 +Add Copy Full Path option (in tab context menu) to copy path of selected tab
 +Add To Uppercase and To Lowercase items to text buffer context menu
 +Shelf tabs can have icons in them
++Make configuration directory able to be placed in the installation location so
+that user configuration settings can be portable if the app is installed on a
+usb drive.
 
 BUG FIXES:
 +Properly update titlebar and other contexts when page change is initiated from
